--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>jalan_v1</title>
   </head>
-  <body>
+  <body style="overflow: hidden;margin: 0;padding: 0;height: 100vh">
     <noscript>
       <strong>We're sorry but jalan_v1 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
